--- a/config.yml
+++ b/config.yml
@@ -12,4 +12,5 @@ jobs:
       - run:
           name: Run tests
           command: |
-            python -m unittest
+            python greetings.py
+            python -m unittest test_greetings.py
